alteracao no sabado

--- a/avaliacoes/atividade1/atividades.html
+++ b/avaliacoes/atividade1/atividades.html
@@ -36,11 +36,12 @@
       <tr>
           <td bgcolor="4169E1">11:30h</td>
           <td bgcolor="00BFFF">Aula de violão</td>
-        <td bgcolor="87CEFA">Leitura</td>
-        <td bgcolor="00BFFF">Treino de ombro</td>
-        <td bgcolor="87CEFA">Caminhada</td>
+          <td bgcolor="87CEFA">Leitura</td>
+          <td bgcolor="00BFFF">Treino de ombro</td>
+          <td bgcolor="87CEFA">Treino de braços</td>
           <td bgcolor="00BFFF">Aula de violão</td>
           <td bgcolor="87CEFA">futebol</td>
+          <td bgcolor="00BFFF">futebol</td>
       </tr>
     </table>
   </body>
