--- a/avaliacoes/index.html
+++ b/avaliacoes/index.html
@@ -10,7 +10,9 @@
     <nav>
       <a href="/../index.html">Ínicio</a> /
       <a href="atividade1/index.html">Atividade Avaliativa 1</a> /
-      <a href="atividade2/index.html">Atividade Avaliativa 2</a> /  
+      <a href="atividade2/index.html">Atividade Avaliativa 2</a> / 
+      <a href="atividade3/index.html">Atividade Avaliativa 3</a> /
+      <a href="arte/index.html">Galeria de Arte</a> /  
     </nav>  
   </body>
 </html>
