--- a/avaliacoes/index.html
+++ b/avaliacoes/index.html
@@ -12,7 +12,7 @@
       <a href="atividade1/index.html">Atividade Avaliativa 1</a> /
       <a href="atividade2/index.html">Atividade Avaliativa 2</a> / 
       <a href="atividade3/index.html">Atividade Avaliativa 3</a> /
-      <a href="atividade3/index.html/arte/index.html">Galeria de Arte</a> /  
+      <a href="arte/atividade3/index.html">Galeria de Arte</a> /  
     </nav>  
   </body>
 </html>
