--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8"> 
-    <title>Home</title>
+    <title>Galeria de Arte</title>
   </head>
   <body>
     <header>
-    <h1>Home</h1>
+    <h1>Galeria de Arte</h1>
     <nav>
       <a href="../index.html">Ínicio</a> /
       <a href="index.html">Home</a>
