--- a/avaliacoes/atividade3/contato.html
+++ b/avaliacoes/atividade3/contato.html
@@ -13,6 +13,7 @@
       <li><a href="contato.html">Contato</a></li>    
       <li><a href="index.html">Home</a></li>
       <li><a href="atividades.html">Atividades</a></li> 
+      <li><a href="arte.html">Galeria de Arte</a></li>  
     </ul>
     <hr>
     <main> 
