--- a/avaliacoes/atividade3/index.html
+++ b/avaliacoes/atividade3/index.html
@@ -27,7 +27,8 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="contato.html">Contato</a></li>
       <li><a href="../index.html">Ínicio</a></li>
-      <li><a href="atividades.html">Atividades</a></li>      
+      <li><a href="atividades.html">Atividades</a></li>  
+      <li><a href="arte.html">Galeria de Arte</a></li>     
     </ul>
     <main>
       <p>Olá, bem-vindo a esse website!</p>
