--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -24,14 +24,17 @@
       <a href="contato.html">Contato</a>
     </nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contato.html">Contato</a></li>
-      <li><a href="../index.html">Ínicio</a></li>
-      <li><a href="atividades.html">Atividades</a></li>      
+      <nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="../index.html">Ínicio</a></li>
+        <li><a href="atividade.html">Atividade</a></li> 
+        <li><a href="arte.html">Galeria de Arte</a></li> 
+      </nav>    
     </ul>
     <main>
 
-      
+
       <p>Olá, bem-vindo a esse website!</p>
       <p align=justify>
       Todas estas questões, devidamente ponderadas, levantam dúvidas sobre se a execução dos pontos do programa promove a alavancagem do fluxo de informações.</p>
