--- a/avaliacoes/atividade3/atividade.html
+++ b/avaliacoes/atividade3/atividade.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="index.html">Ínicio</a></li>
       <li><a href="atividades.html">Atividades</a></li>
+      <li><a href="arte.html">Galeria de Arte</a></li>  
       <li><a href="contato.html">Contato</a></li>
       <li><a href="index.html">Home</a></li>
     </ul>
