--- a/avaliacoes/atividade3/contato.html
+++ b/avaliacoes/atividade3/contato.html
@@ -8,13 +8,15 @@
     <header>
       <h1>Contato</h1>
     </header>
-    <ul>
-      <li><a href="index.html">Ínicio</a></li>
-      <li><a href="contato.html">Contato</a></li>    
-      <li><a href="index.html">Home</a></li>
-      <li><a href="atividades.html">Atividades</a></li> 
-      <li><a href="arte.html">Galeria de Arte</a></li>  
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="index.html">Ínicio</a></li>
+        <li><a href="contato.html">Contato</a></li>    
+        <li><a href="index.html">Home</a></li>
+        <li><a href="atividades.html">Atividades</a></li> 
+        <li><a href="arte.html">Galeria de Arte</a></li>  
+      </ul>
+    </nav>
     <hr>
     <main> 
       <p>Nome: Gabriel Guedes</p>
