--- a/avaliacoes/atividade3/index.html
+++ b/avaliacoes/atividade3/index.html
@@ -23,13 +23,15 @@
     <nav>
       <a href="contato.html">Contato</a>
     </nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contato.html">Contato</a></li>
-      <li><a href="../index.html">Ínicio</a></li>
-      <li><a href="atividades.html">Atividades</a></li>  
-      <li><a href="arte.html">Galeria de Arte</a></li>     
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="../index.html">Ínicio</a></li>
+        <li><a href="atividades.html">Atividades</a></li>  
+        <li><a href="arte.html">Galeria de Arte</a></li>     
+      </ul>
+    </nav>
     <main>
       <p>Olá, bem-vindo a esse website!</p>
       <p align=justify>
