--- a/avaliacoes/atividade3/atividade.html
+++ b/avaliacoes/atividade3/atividade.html
@@ -5,13 +5,17 @@
     <title>Atividades</title>
   </head>
   <body>
-    <h1>Atividades</h1>
+    <header>
+      <h1>Atividades</h1>
+    </header>
     <ul>
-      <li><a href="index.html">Ínicio</a></li>
-      <li><a href="atividades.html">Atividades</a></li>
-      <li><a href="arte.html">Galeria de Arte</a></li>  
-      <li><a href="contato.html">Contato</a></li>
-      <li><a href="index.html">Home</a></li>
+      <nav>
+        <li><a href="index.html">Ínicio</a></li>
+        <li><a href="atividades.html">Atividades</a></li>
+        <li><a href="arte.html">Galeria de Arte</a></li>  
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="index.html">Home</a></li>
+      </nav>
     </ul>
     <hr>
     <main>
