1 file modified, 3 added, 3 deleted

--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -33,8 +33,9 @@
       </nav>    
     </ul>
     <main>
-    
-
+      <img width="300px" border="1" alt="Tropa de exproraçâo de shingeki no kyojin "
+       src="https://github.com/GGDSifnmg/web-platform-ndwaej/blob/master/shingeki%20no%20kyojin.jpg">      
+      
       <p>Olá, bem-vindo a esse website!</p>
       <p align=justify>
       Todas estas questões, devidamente ponderadas, levantam dúvidas sobre se a execução dos pontos do programa promove a alavancagem do fluxo de informações.</p>
