--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -34,7 +34,7 @@
     </ul>
     <main>
       <img width="300px" border="1" alt="Tropa de exproraçâo de shingeki no kyojin "
-       src="https://github.com/GGDSifnmg/web-platform-ndwaej/blob/master/shingeki%20no%20kyojin.jpg">      
+       src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/shingeki no kyojin.jpg">      
       
       <p>Olá, bem-vindo a esse website!</p>
       <p align=justify>
