--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -33,6 +33,9 @@
       </nav>    
     </ul>
     <hr>
+    <header>
+      <h2>Shingeki no Kyojin</h2>
+    </header>
     <main>
       <img width="300px" border="1" alt="Tropa de exproraçâo de shingeki no kyojin "
        src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/shingeki no kyojin.jpg">      
