--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -34,10 +34,10 @@
     </ul>
     <hr>
     <header>
-      <h2>Shingeki no Kyojin</h2>
+      <h3>Shingeki no Kyojin</h3>
     </header>
     <main>
-      <img width="300px" border="1" alt="Tropa de exproraçâo de shingeki no kyojin "
+      <img width="300px" border="1" vspace="10px" hspace="10px"   alt="Tropa de exproraçâo de shingeki no kyojin "
        src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/shingeki no kyojin.jpg">      
       
       <p>Shingeki no Kyojin, ou traduzindo em português Ataque dos Titãs, onde traz a empolgação ao o público onde a sociedade é  aterrorizada por criaturas . Os Titãs são uma raça humanoide irracional gigantesca, com corpo desproporcional e sem sexo definido. Seu comportamento agressivo causa pânico nos humanos, que passaram a viver protegidos em muralhas. Apesar de atacarem e devorarem pessoas, sua principal fonte de energia é a luz solar. Muitos mitos foram construídos acerca dessas criaturas para esconder a terrível verdade de que, no fundo, titãs são apenas seres humanos. Antes de serem as temíveis criaturas que vemos no anime, os Titãs eram pessoas comuns, simples Eldianos que foram transformados contra sua vontade por soldados da nação Marley.      Eles são vítimas de um regime autoritário e usados como armas para isolar e controlar o povo de Paradis, além de solucionar guerras contra nações vizinhas. Os humanos que  se transformam em Titãs em contato com o material genético dos Titãs Originais. Eles se tornam Titãs Puros, as versões irracionais que tentam devorar humanos por alguma razão .Os Titãs Puros não parecem ter um objetivo maior para seus ataques, além de devorar as suas vítimas. Se um titã puro consumir diretamente uma pessoa que tem um dos 9 titãs originais, ganha acesso a seus poderes e memórias, podendo virar um poderoso titã quando quiser, sem perder sua consciência. Esses Titãs especiais também conseguem retornar a forma humana quando necessário. Também são conhecidos como Shifters, devido a sua habilidade de alternar entre a forma humana e titânica. Esses são nove titãs únicos que retém sua inteligência mesmo quando transformados. Porém, todo esse poder tem um custo,  eles foram amaldiçoados a viver apenas 13 anos após sua primeira transformação.
