--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -37,7 +37,7 @@
       <h3>Shingeki no Kyojin</h3>
     </header>
     <main>
-      <img width="300px" border="1" vspace="10px" hspace="10px"   alt="Tropa de exproraçâo de shingeki no kyojin "
+      <img width="300px" border="1" vspace="10px" hspace="10px" align="left"  alt="Tropa de exproraçâo de shingeki no kyojin "
        src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/shingeki no kyojin.jpg">      
       
       <p>Shingeki no Kyojin, ou traduzindo em português Ataque dos Titãs, onde traz a empolgação ao o público onde a sociedade é  aterrorizada por criaturas . Os Titãs são uma raça humanoide irracional gigantesca, com corpo desproporcional e sem sexo definido. Seu comportamento agressivo causa pânico nos humanos, que passaram a viver protegidos em muralhas. Apesar de atacarem e devorarem pessoas, sua principal fonte de energia é a luz solar.</p> 
@@ -51,7 +51,7 @@
       <h3>Tokyo Revengers</h3>
     </header>
     <main>
-      <img border="1" width="300px" vspace="10px" hspace="10px"
+      <img border="1" width="300px" vspace="10px" hspace="10px" align="rigth" alt="A Gangue Tokyo Manji"
        src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/tokyo revengers.jpg">
       <p>A história de Tokyo Revengers é daquelas que partem de uma premissa bem fantasiosa, mas que mantém um pézinho na realidade. O protagonista é Takemichi Hanagaki, um jovem adulto cuja rotina se resume a trabalhar em uma loja de DVDs e voltar para seu minúsculo apartamento, em uma vida sem muito futuro. Num belo dia, enquanto assiste ao telejornal, Takemichi escuta a notícia sobre a morte de Hinata Tachibana, assim como de seu irmão mais novo Naoto Tachibana. É aí que vem uma memória de seu passado, Hinata é ninguém menos que sua namorada na época de escola, a única pessoa que ele amou na vida. E agora ela estava morta.</p>
 
@@ -66,7 +66,7 @@
       <h3>Jujutsu Kaisen</h3>
     </header>
     <main>
-      <img border="1" width="300px" vspace="10px" hspace="10px"
+      <img border="1" width="300px" vspace="10px" hspace="10px" align="left"
       src="https://stackblitz.com/files/web-platform-ndwaej/github/GGDSifnmg/web-platform-ndwaej/master/jujutsu kaisen.jpg">
       <p> Jujutsu Kaisen é um anime sombrio que lida com elementos sobrenaturais como maldições, espíritos e feitiçaria. O anime começa com a morte do avô do protagonista, Yuji Itadori. Antes de morrer, ele pede que Itadori viva uma vida em que ele possa escolher como morrer sem ter arrependimentos. Itadori não possui mais ninguém além de seu avô e é um cara bem solitário.</p>  
       <p> Na escola, ele faz parte do clube de ocultismo, apesar de ter mais habilidades ligadas ao atletismo. No clube de ocultismo, os membros acabam encontrando um objeto misterioso, até descobrirem que se tratava de algum tipo de dedo humano. A verdade é que este é o dedo de Ryomen Sukuna, conhecido como o Rei das Maldições. A mera presença deste objeto é capaz de atrair maldições por causa de sua energia amaldiçoada. Assim, seus amigos ficam em perigo e aparecem dois feiticeiros para resolver o problema. No meio disso tudo, Itadori devora o dedo de Sukuna e acaba ganhando poderes. Por alguma razão, Sukuna não consegue tomar posse do corpo de Yuji, que começa a se aproveitar do fato.</p>
