--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -34,7 +34,7 @@
     </ul>
     <hr>
     <header>
-      <h3><em> no Kyojin</em></h3>
+      <h3>Shingeki no Kyojin</h3>
     </header>
     <main>
       <img width="300px" border="1" vspace="10px" hspace="10px" align="left"  alt="Tropa de exproraçâo de shingeki no kyojin "
@@ -47,6 +47,9 @@
       <p>Após séculos sendo massacrados pelo Império Eldiano, os marleyanos descobriram uma forma de criar titãs irracionais usando o fluido espinhal dos Titãs Originais. Essa era a arma que eles precisavam para conquistar sua independência e assim, Marley retomou o poder, oprimindo os Eldianos para jamais sofrerem com a opressão do passado.</p>
       <p>Conforme o anime se aproxima do final de sua quarta e última temporada, os segredos mais sombrios sobre essas criaturas colossais são revelados e isso muda tudo que acreditávamos sobre a série. A verdade é tão absurda que foi capaz de corromper até mesmo Eren Yeager. O antigo protagonista esperançoso agora lidera devotos na Facção Yeager em busca de restaurar o Império de Eldia, passando por cima de qualquer um, até mesmo seus amigos, para concluir seu objetivo.</p>
     </main>
+    <b> Referências:</b>
+      <ul>
+        <a href=""></a>
     <header>
       <h3>Tokyo Revengers</h3>
     </header>
