--- a/avaliacoes/atividade3/arte.html
+++ b/avaliacoes/atividade3/arte.html
@@ -46,10 +46,11 @@
       <p>Segundo as histórias, o primeiro Titã surgiu quando um membro da família real Eldiana fez um acordo com o Diabo de Toda a Terra para conseguir o Poder do Titã. Ela se tornou a Titã Fundadora e, graças a suas habilidades incomparáveis, o Império de Eldia se expandiu, conquistando diversos reinos em nome da paz. Essa era Ymir Fritz. Quando estava prestes a morrer, após concluir seus 13 anos como uma Titã, Ymir decidiu dividir seu poder entre as três herdeiras e que passou o poder para seus filhos. Eles poderiam se transformar em Titãs especiais com habilidades únicas que mantinham sua consciência mesmo quando transformados. Eles ficariam conhecidos como os nove Titãs Originais.</p> 
       <p>Após séculos sendo massacrados pelo Império Eldiano, os marleyanos descobriram uma forma de criar titãs irracionais usando o fluido espinhal dos Titãs Originais. Essa era a arma que eles precisavam para conquistar sua independência e assim, Marley retomou o poder, oprimindo os Eldianos para jamais sofrerem com a opressão do passado.</p>
       <p>Conforme o anime se aproxima do final de sua quarta e última temporada, os segredos mais sombrios sobre essas criaturas colossais são revelados e isso muda tudo que acreditávamos sobre a série. A verdade é tão absurda que foi capaz de corromper até mesmo Eren Yeager. O antigo protagonista esperançoso agora lidera devotos na Facção Yeager em busca de restaurar o Império de Eldia, passando por cima de qualquer um, até mesmo seus amigos, para concluir seu objetivo.</p>
-    </main>
+    </main>     
     <b> Referências:</b>
       <ul>
-        <a href=""></a>
+        <li><a href="https://www.legiaodosherois.com.br/amp/2021/shingeki-no-kyojin-ataque-titas-tudo-precisa-saber-titas.html">Sobre o texto</a></li>
+        <li><a href="https://pin.it/7BM5BCW">Imagem</a></li> </ul>
     <header>
       <h3>Tokyo Revengers</h3>
     </header>
