--- a/avaliacoes/atividade3/index.html
+++ b/avaliacoes/atividade3/index.html
@@ -23,6 +23,12 @@
     <nav>
       <a href="contato.html">Contato</a>
     </nav>
+    <header>
+    <h1>Galeria de Arte</h1>
+    </header>
+    <nav>
+      <a href="arte.html">Galeria de Arte</a>
+    </nav>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
