--- a/avaliacoes/atividade3/index.html
+++ b/avaliacoes/atividade3/index.html
@@ -34,7 +34,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="contato.html">Contato</a></li>
         <li><a href="../index.html">Ínicio</a></li>
-        <li><a href="atividades.html">Atividades</a></li>  
+        <li><a href="atividade.html">Atividades</a></li>  
         <li><a href="arte.html">Galeria de Arte</a></li>     
       </ul>
     </nav>
