--- a/avaliacoes/atividade3/atividade.html
+++ b/avaliacoes/atividade3/atividade.html
@@ -11,10 +11,10 @@
     <ul>
       <nav>
         <li><a href="index.html">Ínicio</a></li>
-        <li><a href="atividades.html">Atividades</a></li>
-        <li><a href="arte.html">Galeria de Arte</a></li>  
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="contato.html">Contato</a></li>    
         <li><a href="index.html">Home</a></li>
+        <li><a href="atividade.html">Atividades</a></li> 
+        <li><a href="arte.html">Galeria de Arte</a></li> 
       </nav>
     </ul>
     <hr>
