--- a/avaliacoes/atividade2/contato.html
+++ b/avaliacoes/atividade2/contato.html
@@ -19,7 +19,7 @@
       <p>Nome: Gabriel Guedes</p>
       <p>Telefone: (38)998657328</p>
       <p><a href="https://github.com/GGDSifnmg/GABRIEL-Guedes1">Link do meu gitrub</a></p>
-      <iframe src="https://www.instagram.com/p/CXzjKUOsjm5/?utm_medium=share_sheet" width="320" height="568" frameborder=0></iframe>
+      <iframe src="https://www.instagram.com/p/CXzjKUOsjm5/embed" width="320" height="568" frameborder=0></iframe>
     </main>
     <footer>
       <p>Desenvolvido por <a href="https://github.com/GGDSifnmg/GABRIEL-Guedes1">Gabriel Guedes</a></p>
