--- a/avaliacoes/atividade3/index.html
+++ b/avaliacoes/atividade3/index.html
@@ -15,7 +15,7 @@
     <h1>Atividades</h1>
     </header>
     <nav>
-    <a href="atividades.html">Atividades</a>
+    <a href="atividade.html">Atividades</a>
     </nav>
     <header>
     <h1>Contato</h1>
