--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -7,7 +7,7 @@
   <body> 
     <h1>Home</h1>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       
     <hr>
       <li>Olá, bem-vindo a esse website!</li>
