--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Portifolio</title>
   </head>
   <body>
     <header>
-      <h1>Home</h1>
+      <h1>Portifolio</h1>
     </header>
     <nav>
       <a href="avaliacoes/index.html"> Atividades avaliativa/</a>
