--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -12,7 +12,7 @@
     <nav class="nav nav-pills flex-column flex-sm-row">
     <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Active</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Voltar</a>
-    <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
+    <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
     <a class="flex-sm-fill text-sm-center nav-link disabled">Disabled</a>
   </nav>
 </body>
