--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -10,7 +10,7 @@
      <h1>Portifolio</h1>
     </header>
     <nav class="nav nav-pills flex-column flex-sm-row">
-    <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../contato.html/atividade4/index.html">Active</a>
+    <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../contato.html/atividade4/">Active</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Voltar</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
     <a class="flex-sm-fill text-sm-center nav-link disabled">Disabled</a>
