--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -10,10 +10,9 @@
      <h1>Portifolio</h1>
     </header>
     <nav class="nav nav-pills flex-column flex-sm-row">
-    <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../atividade4/contato.html">Active</a>
+    <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../atividade4/contato.html">Contato</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../index.html">Voltar</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
-    <a class="flex-sm-fill text-sm-center nav-link disabled">Disabled</a>
   </nav>
 </body>
 </html>
