--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -13,6 +13,12 @@
     <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="../index.html">Voltar</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/contato.html">Contato</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
+    <main>
+     <p>Todavia, a revolução dos costumes representa uma abertura para a melhoria das diretrizes de desenvolvimento para o futuro.</p>
+     <p>O empenho em analisar a competitividade nas transações comerciais deve passar por modificações independentemente dos modos de operação convencionais.</p>
+     <p>Podemos já vislumbrar o modo pelo qual a estrutura atual da organização acarreta um processo de reformulação e modernização do retorno esperado a longo prazo</p>
+
+    </main>
   </nav>
 </body>
 </html>
