--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -14,7 +14,21 @@
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/contato.html">Contato</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
     <main>
-     <p>Todavia, a revolução dos costumes representa uma abertura para a melhoria das diretrizes de desenvolvimento para o futuro.</p>
+
+
+      <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+        <h4 id="scrollspyHeading1">Podemos já vislumbrar o modo pelo qual a estrutura atual da organização acarreta um processo de reformulação e modernização do retorno esperado a longo prazo</h4>
+        <p>...</p>
+        <h4 id="scrollspyHeading2">Second heading</h4>
+        <p>...</p>
+        <h4 id="scrollspyHeading3">O empenho em analisar a competitividade nas transações comerciais deve passar por modificações independentemente dos modos de operação convencionais.</h4>
+        <p>...</p>
+        <h4 id="scrollspyHeading4">Acima de tudo, é fundamental ressaltar que o desenvolvimento contínuo de distintas formas de atuação exige a precisão e a definição do processo de comunicação como um todo.</h4>
+        <p>...</p>
+        <h4 id="scrollspyHeading5">Fifth heading</h4>
+        <p>...</p>
+      </div>
+     <p>O empenho em analisar a competitividade nas transações comerciais deve passar por modificações independentemente dos modos de operação convencionais.</p>
      <p>O empenho em analisar a competitividade nas transações comerciais deve passar por modificações independentemente dos modos de operação convencionais.</p>
      <p>Podemos já vislumbrar o modo pelo qual a estrutura atual da organização acarreta um processo de reformulação e modernização do retorno esperado a longo prazo</p>
 
