--- a/avaliacoes/atividade5/portifolio.html
+++ b/avaliacoes/atividade5/portifolio.html
@@ -15,6 +15,9 @@
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/contato.html">Contato</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="../atividade3/arte.html">Galeria de Arte</a>
     <hr>
+    <header>
+      <h4>Texto Lero Lero</h4>
+    </header>
     <main>
       <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
         <h4 id="scrollspyHeading1">Podemos já vislumbrar o modo pelo qual a estrutura atual da organização acarreta um processo de reformulação e modernização do retorno esperado a longo prazo</h4>
